fix align middle hover text
fix align middle hover text yaaaay :D

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -107,7 +107,6 @@ nav > ul > li > a:hover::after {
 .image-link-text {
     color: #f8f8f8;
     text-align: center;
-    padding-top: 50%; 
     font-size: 45px;
 }
 
@@ -118,7 +117,7 @@ nav > ul > li > a:hover::after {
     right: 0;
     transition: all .5s;
     overflow: hidden;
-    height: 0;
+    height: 0%;
     background: #3a3a3a;
 }
 
@@ -126,7 +125,14 @@ nav > ul > li > a:hover::after {
 .overlay:hover {
     height: 100%;
     background: #3a3a3a;
-}
+} 
+
+.aligner {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
 
 /* ---------------------- */
 /* ----- Text Decoration ----- */
